// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H6 component should accept additional props 1`] = `
<Text
  accessible={false}
  style={
    Object {
      "color": "#505050",
      "fontFamily": "InterUI-Bold",
      "fontSize": 12,
      "lineHeight": 17.28,
    }
  }
>
  "Radical obedience to Christ is not easy... It's not comfort, not health, not wealth, and not prosperity in this world. Radical obedience to Christ risks losing all these things. But in the end, such risk finds its reward in Christ. And he is more than enough for us." ― David Platt
</Text>
`;

exports[`the H6 component should accept and render passed in styles 1`] = `
<Text
  style={
    Object {
      "color": "salmon",
      "fontFamily": "InterUI-Bold",
      "fontSize": 12,
      "lineHeight": 17.28,
    }
  }
>
  Salmon text
</Text>
`;

exports[`the H6 component should render a loading state 1`] = `
<View
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#A5A5A5",
      "borderRadius": 6,
      "height": 12,
      "marginVertical": 2.6400000000000006,
      "width": "50%",
    }
  }
/>
`;

exports[`the H6 component should render a loading state with correct positioning (margins) 1`] = `
<View
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#A5A5A5",
      "borderRadius": 6,
      "height": 12,
      "marginBottom": 8.64,
      "marginVertical": 2.6400000000000006,
      "width": "50%",
    }
  }
/>
`;

exports[`the H6 component should render correctly 1`] = `
<Text
  style={
    Object {
      "color": "#505050",
      "fontFamily": "InterUI-Bold",
      "fontSize": 12,
      "lineHeight": 17.28,
    }
  }
>
  Default H6 text
</Text>
`;

exports[`the H6 component should render with correct padding 1`] = `
<Text
  padded={true}
  style={
    Object {
      "color": "#505050",
      "fontFamily": "InterUI-Bold",
      "fontSize": 12,
      "lineHeight": 17.28,
      "paddingBottom": 8.64,
    }
  }
>
  Padded H6 text
</Text>
`;
